--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 
 //firebase setup
     implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 //firebase setup
 apply plugin: 'com.google.gms.google-services'
