--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 *.iml
 .gradle
 /local.properties
-# ignore Android Studio config directory
-.idea/
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
