--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,13 @@ dependencies {
 
 //firebase setup
     implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.android.support:design:28.0.0'
+
+// ML setup
+    implementation 'com.google.firebase:firebase-ml-vision:20.0.0'
+    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
+    implementation 'com.wonderkiln:camerakit:0.13.1'
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
 }
 //firebase setup
 apply plugin: 'com.google.gms.google-services'
