--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
     implementation 'com.wonderkiln:camerakit:0.13.1'
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 }
 //firebase setup
 apply plugin: 'com.google.gms.google-services'
