Added dummy data and changed analytics to ConstrainedLayout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
 
         <activity
             android:name=".AnalyticsActivity"
-            android:label="Don8 - Analytics">
+            android:label="Don8 - Data">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
