--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,9 @@ dependencies {
 
 //firebase setup
     implementation 'com.google.firebase:firebase-core:16.0.9'
+//nav bar
     implementation 'com.android.support:design:28.0.0'
-
-// ML setup
+//    ML setup
     implementation 'com.google.firebase:firebase-ml-vision:20.0.0'
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
     implementation 'com.wonderkiln:camerakit:0.13.1'
