--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,13 +31,15 @@
 
         <activity
             android:name=".ProfileActivity"
-            android:label="@string/title_activity_maps">
+            android:label="don8">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MapsActivity" />
+
     </application>
 
 </manifest>
