--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name">
+        </activity>
+
+        <activity
+            android:name=".HistoryActivity"
+            android:label="History">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -39,8 +44,19 @@
         </activity>
 
         <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps">
+
+        </activity>
+
+        <activity
             android:name=".AnalyticsActivity"
-            android:label="Don8 - Analytics">
+            android:label="Analytics">
+        </activity>
+
+        <activity
+            android:name=".ProfileActivity"
+            android:label="Profile">
         </activity>
 
         <activity android:name=".ConfirmationActivity"></activity>
