--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,21 +38,19 @@
             </intent-filter>
         </activity>
 
-
+        <activity
+            android:name=".HistoryActivity"
+            android:label="History">
+        </activity>
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-            </intent-filter>
+
         </activity>
 
         <activity
-            android:name=".AnalyticsActivity"
-            android:label="Don8 - Data">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-            </intent-filter>
+            android:name=".DataActivity"
+            android:label="Analytics">
         </activity>
 
         <activity android:name=".ConfirmationActivity"></activity>
