--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
 //firebase setup
 apply plugin: 'com.google.gms.google-services'
