--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity android:name=".RestaurantSignUpActivity"/>
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".ConfirmationActivity"></activity>
     </application>
 
 </manifest>
